--- a/OpenOOD/configs/pipelines/train/baseline.yml
+++ b/OpenOOD/configs/pipelines/train/baseline.yml
@@ -26,11 +26,11 @@ evaluator:
 
 optimizer:
   name: sgd
-  num_epochs: 100
+  num_epochs: 1000
   lr: 0.1
   momentum: 0.9
   weight_decay: 0.0005
 
 recorder:
   name: base
-  save_all_models: False
+  save_all_models: True
